testsuite/tests/printer/Test20315.hs
{-# LANGUAGE LinearTypes #-}

f = id :: a %(m n) -> a
